5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1644_2704.log
== TEST (2019-04-11 16:46:05) 
-- CODE:
nota = float(input("n:"))
bon = input("bon:")
if(bon == s ):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bon == s ):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:23) 
-- CODE:
nota = float(input("n:"))
bon = input("bon:")
if(bon == s ):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bon == s ):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:23) 
-- CODE:
nota = float(input("n:"))
bon = input("bon:")
if(bon == s ):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bon == s ):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:24) 
-- CODE:
nota = float(input("n:"))
bon = input("bon:")
if(bon == s ):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bon == s ):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:24) 
-- CODE:
nota = float(input("n:"))
bon = input("bon:")
if(bon == s ):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bon == s ):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:46:47) 
-- CODE:
nota = float(input("n:"))
bon = input("bon:")
if(bon == s):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(bon == s):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:47:29) 
-- CODE:
nota = float(input("n:"))
bon = input("bon:")
if( bon + S):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if( bon + S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:24) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N")
if("S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:55:32) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N")
if("S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.222899
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
10.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.888888888888889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:52) 
-- CODE:
nota = float(input("n:"))
bon = input("S , N")
if("S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:02) 
-- CODE:
nota = float(input("n:"))
bon = input("S , N:")
if("S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:16) 
-- CODE:
nota = float(input("n:"))
bon = input("S , N:")
if("S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:56:45) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if("S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:57:12) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N")
if("S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:57:50) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:57:58) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.247543
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
10.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:58:14) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:58:25) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:58:58) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.221419
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
10.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:59:32) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:59:38) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- OUTPUT:
5.555555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:59:45) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.191083
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
10.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:59:47) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.317226
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
10.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:59:48) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.230692
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.555555555555555
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:59:48) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.319097
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5.555555555555555
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
10.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:59:48) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.335352
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
10.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
4.4
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:59:48) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = nota*10/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.480499
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
4.4
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
4.4
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:59:55) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = (nota*10)/9
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.148158
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.555555555555555
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
10.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:00:44) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = (nota*10)+nota
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.172645
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
55.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
99.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:01:13) 
-- CODE:
nota = float(input("n:"))
bon = input("S,N:")
if(bon == "S"):
	nf = (nota/10)+nota
else: 
	nf = nota
print(nf)
-- EXECUTION TIME:
0.159711
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
